Fixed progressbar color and added temporal padding and center align to content

--- a/components/BaseContentLayout/BaseContentLayout.module.css
+++ b/components/BaseContentLayout/BaseContentLayout.module.css
@@ -8,6 +8,8 @@
 .content {
   flex: 1;
   display: flex;
+  padding: 80px 10px;
+  text-align: center;
 }
 
 .submitContainer {
